fix(styles): error height and overflow-y of visual-demo and grid of generator-content

--- a/src/app/components/visual-demo/visual-demo.component.scss
+++ b/src/app/components/visual-demo/visual-demo.component.scss
@@ -7,9 +7,10 @@ $color-stop: #e4d1d6;
   grid-template-areas:
     'demo-title . .'
     'demo-code . demo-console'
-    'demo-code . button-restart';
+    'demo-code . button-restart'
+    '. . .';
   grid-template-columns: 1fr v.$margin-elements 1fr;
-  grid-template-rows: 2rem 1fr 2rem;
+  grid-template-rows: 2rem 1fr 2rem v.$margin-elements;
   height: 100%;
   width: 100%;
 }
@@ -44,6 +45,7 @@ $color-stop: #e4d1d6;
   code {
     font-family: 'monospace';
     line-height: 1.3rem;
+    white-space: pre-wrap;
   }
 }
 .buttons {
@@ -55,12 +57,13 @@ $color-stop: #e4d1d6;
     display: grid;
     grid-gap: 0.5rem;
     grid-template-areas:
-      'demo-title . '
-      'demo-code demo-code'
-      'demo-console demo-console'
-      'button-restart button-restart';
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 2rem 1fr 1fr 2rem;
+      'demo-title '
+      'demo-code'
+      'demo-console '
+      'button-restart'
+      ' . ';
+    grid-template-columns: 1fr;
+    grid-template-rows: 2rem 1fr auto 2rem v.$margin-elements;
     height: 100%;
     width: 100%;
   }
